--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#" class="btn btn--orange">Get in Touch</a>
+    <a href="#" class="btn btn--blue">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
